# winman

./: README.md  config.json
src/: pyproject.toml  winman.py
